Strange behaviour with Bevel modifier in Angle or Weight method #44961

Closed
opened 2015-06-05 12:30:27 +02:00 by Tom Pov · 10 comments

System Information
Win7 x64 GTX580

Blender Version
Broken: 2.74-896f08b
Worked: 2.74-fd8b602

Short description of error
Bevel modifier with strange behaviour in Angle and Weight method (see attached file)
Exact steps for others to reproduce the error
In the attached file I have duplicated a simple model, one with None method, the other with weight method in the Bevel modifier.

bevel.blend

**System Information** Win7 x64 GTX580 **Blender Version** Broken: 2.74-896f08b Worked: 2.74-fd8b602 **Short description of error** Bevel modifier with strange behaviour in Angle and Weight method (see attached file) **Exact steps for others to reproduce the error** In the attached file I have duplicated a simple model, one with None method, the other with weight method in the Bevel modifier. [bevel.blend](https://archive.blender.org/developer/F185363/bevel.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tompov

Added subscriber: @tompov
Author

So, I think it's happend after commit 896f08bde8 !?

So, I think it's happend after commit 896f08bde8 !?

Added subscriber: @mont29

Added subscriber: @mont29
Howard Trickey was assigned by Bastien Montagne 2015-06-05 13:12:48 +02:00

Howard, think this one is for you?

Howard, think this one is for you?
Member

Thanks for the report. I'll work on this now.

Thanks for the report. I'll work on this now.
Member

The problem is not related to Angle or Weighted, it is just due to only beveling certain edges.
The code was too willing to slide the bevel meet points along an adjacent edge even in cases
where that edge was barely visible. This led to meet points very far away.
I made the code less willing to do so, and will shortly commit the fix.

The problem is not related to Angle or Weighted, it is just due to only beveling certain edges. The code was too willing to slide the bevel meet points along an adjacent edge even in cases where that edge was barely visible. This led to meet points very far away. I made the code less willing to do so, and will shortly commit the fix.

This issue was referenced by 68cdd2b361

This issue was referenced by 68cdd2b3619399753123a7b9f7d5fcfed8d2e795
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thank you very much !

Tom

Thank you very much ! Tom
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44961
No description provided.