Fix T44961, bevel spikes out when certain angles near 180.

Made the test for whether one can "see" an adjacent edge less
knife-close to 180. This means it will chose to slide along
such an edge less often, and avoid some spikes.